fixed overflow for template section

--- a/Campaign/static/Campaign/css/campaign.css
+++ b/Campaign/static/Campaign/css/campaign.css
@@ -33,6 +33,7 @@ body {
     padding-top: 20px;
     background-color: #f1f1f1;
     height: 100%;
+    overflow: scroll;
 }
 
 /* sildenav list */
@@ -40,7 +41,6 @@ body {
     width: 200px;
     height: 200px;
     overflow-y: auto;
-
 }
 
 .vertical-menu a {
